<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.AddCardActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:paddingLeft="@dimen/dimen_16"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <include layout="@layout/header" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <vn.bongtran.be.ui.InteractiveScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <ImageView
                    android:id="@+id/img_avatar_new"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_avatar" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="24dp"
                android:padding="@dimen/dimen_10"
                android:background="@drawable/bg_transparent_gray_border_round_corner"
                android:hint="@string/hint_name"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_10"
                android:background="@drawable/bg_transparent_gray_border_round_corner"
                android:hint="@string/hint_address"/>

            <EditText
                android:id="@+id/edt_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_10"
                android:background="@drawable/bg_transparent_gray_border_round_corner"
                android:hint="@string/hint_position" />

            <EditText
                android:id="@+id/edt_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:padding="@dimen/dimen_10"
                android:background="@drawable/bg_transparent_gray_border_round_corner"
                android:hint="@string/hint_about"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16">

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10"
                    android:background="@drawable/bg_transparent_gray_border_round_corner"
                    android:entries="@array/gender_arrays"
                    android:hint="@string/hint_gender"
                    android:prompt="@string/hint_gender" />

                <ImageButton
                    android:id="@+id/btn_gender"
                    android:layout_width="8dp"
                    android:layout_height="6dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_arrow_down" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16">

                <EditText
                    android:id="@+id/edt_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10"
                    android:inputType="date"
                    android:background="@drawable/bg_transparent_gray_border_round_corner"
                    android:hint="@string/hint_bod"/>

                <ImageButton
                    android:id="@+id/btn_dob"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/icon_calendar" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="40dp"
                android:layout_marginRight="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16"
                android:background="@drawable/bg_button"
                android:text="@string/txt_btn_save" />
        </LinearLayout>
    </vn.bongtran.be.ui.InteractiveScrollView>

</LinearLayout>